test/org/midica/testfiles/failing/eff-flow-missing-dot-2.midica
INCLUDE inc/instruments.midica


0: vol.wait()set(50)

